--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,47 +1,27 @@
 [tool.poetry]
-name = "league-scraper"
+name = "b3-scraper"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-packages = [{include = "league_scraper"}]
+packages = [{include = "b3_scraper"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-lxml = "^4.9.2"
-scrapyd = "^1.4.1"
-
+httpx = "^0.27.0"
+pandas = "^2.2.1"
+pyarrow = "^15.0.0"
+fastparquet = "^2024.2.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
-ruff = "^0.0.253"
+ruff = "^0.3.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-extend-exclude = ['.venv', '.ruff_cache']
-ignore = []
-line-length = 100
-select = ['E', 'F', 'W']
-
-[tool.ruff.pydocstyle]
-convention = "google"
-
-[tool.black]
-line-length = 100
-target-version = ['py310']
-include = '\.pyi?$'
-extend-exclude = '''
-# A regex preceded with ^/ will apply only to files and directories
-# in the root of the project.
-(
-    | .venv
-    | .vscode
-    | .ruff_cache
-)
-'''
-
-[tool.isort]
-profile = "black"
+extend-exclude = [".venv", ".ruff_cache", ".mypy_cache"]
+ignore         = ["F401"]
+line-length    = 100
+select         = ["E", "F", "W"]
