--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ httpx = "^0.27.0"
 pandas = "^2.2.1"
 pyarrow = "^15.0.0"
 fastparquet = "^2024.2.0"
+psycopg2-binary = "^2.9.9"
+sqlalchemy = "^2.0.27"
+streamlit = "^1.31.1"
+altair = "^5.2.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.0"
